[package]
name = "bigquery"
version = "0.1.0"
authors = ["Keita Iwatani"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "*"
hyper-rustls = "*"
yup-oauth2 = "4.1.2"
serde_json = "1.0.57"
tokio = { version = "0.2", features = ["full"] }
reqwest = { version = "0.10", features = ["json"] }
